@@ -1,3 +1,8 @@
+2012-04-08  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* driver/pocc/driver-pastops.c: Detect and transform parallel
+	loops in full-tiles.
+
 2012-03-23  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* driver/src/options.c: Add missing code to manage the
